syntax = "proto3";
package book;

import "github.com/grpc-custom/graphql-gateway/graphql.proto";

message Book {
  string isbn  = 1;
  string title = 2;
}

message GetBookIsbn {
  string isbn = 1;
}

message GetBookStruct {
  Book book = 1;
}

message CreateBookStruct{
  string isbn  = 1;
  string title = 2;
}

service BookService {
  rpc GetBook(GetBookIsbn) returns (GetBookStruct) {
    option (grpc_custom.graphql.schema) = {
      query: "getBook"
    };
  }
  rpc CreateBook(CreateBookStruct) returns (GetBookIsbn) {
    option (grpc_custom.graphql.schema) = {
      mutation: "createBook"
    };
  }
}

